[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Enemys/Emy 01 States.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Cockroach.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemys/Emy 01 Cockroach.gd" type="Script" id=3]
[ext_resource path="res://Animations/emy 01/idle.tres" type="Animation" id=4]
[ext_resource path="res://Animations/emy 01/walk.tres" type="Animation" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.99996
height = 18.0

[sub_resource type="CircleShape2D" id=2]
radius = 256.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.0
height = 22.0

[node name="Emy 01 Cockroach" type="KinematicBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
max_speed = 420
acceleration = 52.5

[node name="Emy 01 States" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "idle"
anims/idle = ExtResource( 4 )
anims/walk = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="time_between_walk" type="Timer" parent="."]
wait_time = 2.4

[node name="walk_time" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="AttackRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"\"emy_hitbox\"",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1, 0 )
rotation = 1.5708
shape = SubResource( 3 )
[connection signal="timeout" from="time_between_walk" to="." method="time_between_walk_timeout"]
[connection signal="timeout" from="walk_time" to="." method="walk_time_timeout"]
[connection signal="area_entered" from="AttackRange" to="." method="AttackRange_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="AttackRange_area_exited"]
